--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    color: orange;
+    color: rgb(45, 225, 5);
     background-image: url(dinheiro.png);
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
